k3s/apps/dashdot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashdot
  namespace: monitoring
  labels:
    app: dashdot
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dashdot
  template:
    metadata:
      labels:
        app: dashdot
    spec:
      containers:
        - name: dashdot
          image: mauricenino/dashdot:6.3.4
          ports:
            - containerPort: 3001
              name: web
          volumeMounts:
            - name: host-root
              mountPath: /mnt/host
              readOnly: true
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 256Mi
          securityContext:
            privileged: true
      volumes:
        - name: host-root
          hostPath:
            path: /
            type: Directory
