k3s/apps/dashdot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashdot
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app: dashdot
  ports:
    - name: web
      port: 8120
      targetPort: 3001
      protocol: TCP
