k3s/apps/dashdot/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashdot
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashdot.lan`)
      kind: Rule
      services:
        - name: dashdot
          port: 8120
